Prevent body overflow

--- a/public/background.css
+++ b/public/background.css
@@ -2,6 +2,12 @@ body, .dashboard {
     background: none!important;
 }
 
+body {
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+}
+
 .splash-container {
     position: absolute;
     top: 0;
